# aloop

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cli.py  config.py  harbor-run.sh  interactive.py  interactive_ptk.py  main.py  pyproject.toml  requirements.txt
agent/: agent.py  base.py  context.py  events.py  plan_execute_agent.py  plan_types.py  react_agent.py
docs/: advanced-features.md  agents-md-guide.md  configuration.md  examples.md  extending.md  memory-management.md  packaging.md  ptk-tuned-mode.md  tool_result_processing.md
examples/: agent_example.py  react_example.py  web_fetch_example.py
llm/: __init__.py  base.py  compat.py  content_utils.py  gemini_llm.py  litellm_adapter.py  message_types.py  model_manager.py  oauth_model_sync.py  retry.py
memory/: __init__.py  compressor.py  long_term.py  manager.py  scope.py  short_term.py  store.py  token_tracker.py  types.py
ouro_harbor/: ouro_agent.py
rfc/: 001-enhanced-plan-execute-agent.md  002-tool-result-handling.md  003-asyncio-migration.md  005-context-compact-system.md  005-timer-notify.md  006-multi-model-v2.md  006-ralph-loop.md  008-skills-system.md  009-codex-login-via-litellm-chatgpt.md  009-multi-role-agent.md  010-context-management-optimization.md
roles/: __init__.py  manager.py  types.py
scripts/: bootstrap.sh  dev.sh  tui_mode_bench.py  tui_mode_compare.py  tui_redraw_bench.py
test/: README.md  test_basic.py  test_code_navigator.py  test_interactive_auth_commands.py  test_litellm_adapter.py  test_main_auth_cli.py  test_memory.py  test_notify_integration.py  test_oauth_model_sync.py  test_ptk2_mode.py  test_ptk_tuned_mode.py  test_ralph_loop.py  test_roles.py  test_skills_registry.py  test_slash_command_autocomplete.py  test_smart_edit.py  test_smart_edit_integration.py  test_status_bar_dedupe.py  test_tool_size_limits.py  test_web_fetch.py
tools/: advanced_file_ops.py  base.py  code_navigator.py  code_structure.py  file_ops.py  memory_tools.py  registry.py  retrieve_tool_result.py  shell.py  (+2 more)
(+51 files in other folders)
