[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-loop"
version = "0.1.0"
description = "General AI Agent System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "luohaha", email = "your.email@example.com"}
]
keywords = ["ai", "agent", "llm", "claude", "gpt", "gemini", "react", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "ddgs>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "google-genai>=0.2.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/luohaha/AgenticLoop"
Documentation = "https://github.com/luohaha/AgenticLoop#readme"
Repository = "https://github.com/luohaha/AgenticLoop"
Issues = "https://github.com/luohaha/AgenticLoop/issues"

[project.scripts]
agentic-loop = "cli:main"

[tool.setuptools]
# Use current flat structure
packages = ["agent", "llm", "memory", "tools", "utils"]
py-modules = ["main", "interactive", "config", "cli"]

[tool.setuptools.package-data]
"*" = [".env.example"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
